bpo-35814: Allow same r.h.s. in annotated assignments as in normal ones (GH-11667)